<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="15dp"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/make_siempo_your_default_home_app"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linSiempoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tooltip_circle"
                android:gravity="center"
                android:text="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#3333FF"
                android:textSize="10sp"
                tools:ignore="HardcodedText,SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/select"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_tooltip"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/app_name"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linDefaultApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:visibility="gone"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tooltip_circle"
                android:gravity="center"
                android:text="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#3333FF"
                android:textSize="10sp"
                tools:ignore="HardcodedText,SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/select_your_prefered_home_app"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tooltip_circle"
                android:gravity="center"
                android:text="2"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#3333FF"
                android:textSize="10sp"
                tools:ignore="HardcodedText,SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/tap_always"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linSecond"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

    </LinearLayout>
</LinearLayout>